Auto IRC Bot 3.0: Change Log
-------------------------------------------------------------------------------

3.0 Indev
===============================================================================
    * Added a BotStats module for returning statistics about the bot.
    * Now parsing numeric 396.
    * Added who() to API::IRC.
    * Added hook on_whoreply.
    * PRIVMSGs and NOTICEs that would cause a >512 bytes resulting message are
      now divided into multiple messages.
    * Renamed botnick to botinfo.
    * Renamed Parser::IRC to Proto::IRC.
    * Added an Eval module.
    * Added an UNO module.
    * Added on_part hook.
    
3.0 Alpha 5
===============================================================================
    * Bug fix: Fixed broken rehash.
    * Ignore PRIVMSG's if they're from an invalid source.
    * Fixed an odd bug when viewing non-existent quotes.
    * You can now define how many results are returned by QDB SEARCH/MORE at a
      time with qdb_search_resnum in the config.
    * Added SEARCH and MORE to QDB.
    * Killed EMODS in the starter script and updated MODS
    * Added core command MODLIST.
    * Added command level 3 for logchan-only command.
    * Added a LinkTitle module for getting the title of a web page posted in a
      channel.

3.0 Alpha 4
===============================================================================
    * Added a Dictionary module for looking up definitions of words.
    * server:ajoin now supports channel keys by spacing the name and key.
    * Hooks can now block events by returning -1.
    * bin/buildmod now retrieves the POD from modules and creates man(1) page
      plus HTML file.
    * cjoin() now supports a channel key as the last argument.
    * Added a ChanTopics module for advanced management of channel topics.
    * bantype is now a required configuration value.
    * Added ban() to API::IRC.
    * Changed on_cprivmsg arguments to: \%src, $channel, @msg